Wire playbook rules updates
